<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    app:layoutDescription="@xml/splash_screen_scene">

    <ImageView
        android:id="@+id/logo_part_one"
        android:layout_width="@dimen/_68sdp"
        android:layout_height="@dimen/_76sdp"
        android:src="@drawable/logopart1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/logo_part_two"
        android:layout_width="@dimen/_62sdp"
        android:layout_height="@dimen/_47sdp"
        android:layout_marginStart="@dimen/_minus38sdp"
        android:src="@drawable/logopart2"
        app:layout_constraintBottom_toBottomOf="@id/logo_part_one"
        app:layout_constraintStart_toEndOf="@id/logo_part_one"
        android:contentDescription="@string/todo3" />

    <TextView
        android:id="@+id/artin_text"
        style="@style/iran_sans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/artina"
        android:textColor="#ffffff"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_part_one" />


</androidx.constraintlayout.motion.widget.MotionLayout>